--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     </div>
   </aside></p>
 <h2 id="ασφάλεια-και-διαφάνεια-στο-spinogambino">Ασφάλεια και Διαφάνεια στο Spinogambino</h2>
-<p>Η πλατφόρμα spinogambino ελλάδα δίνει ιδιαίτερη σημασία στην ασφάλεια
+<p>Η πλατφόρμα <a href="https://spinogambino.es" title="Spinogambino">Spinogambino</a> ελλάδα δίνει ιδιαίτερη σημασία στην ασφάλεια
 και τη διαφάνεια. Όλες οι συναλλαγές προστατεύονται με σύγχρονα
 πρωτόκολλα κρυπτογράφησης, ενώ τα παιχνίδια ελέγχονται τακτικά για
 δίκαια αποτελέσματα. Οι παίκτες μπορούν να απολαμβάνουν διασκέδαση με
