--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 πιο συναρπαστικό. Η εγγραφή ολοκληρώνεται σε λίγα απλά βήματα και η
 πλατφόρμα εξασφαλίζει δίκαια αποτελέσματα σε κάθε παιχνίδι. Τουρνουά,
 αποστολές και ειδικές δράσεις ενισχύουν την αλληλεπίδραση και προσφέρουν
-πιο κοινωνική εμπειρία.</p>
+πιο κοινωνική εμπειρία. Κάποιοι ιστότοποι αναφέρουν το <a href="https://unlimluck.gr" title="unlim luck">unlim luck</a> ως πρόσθετη ένδειξη για χρήστες που θέλουν να εξερευνήσουν ποικίλες μορφές διαδικτυακής διασκέδασης.</p>
 <p><img src="/images/doc_main/spinogambino-%e2%80%93-%ce%b7-%ce%b1%cf%80%ce%bf%ce%bb%cf%85%cf%84%ce%b7-%ce%b5%ce%bc%cf%80%ce%b5%ce%b9%cf%81%ce%b9%ce%b1-online-gaming-%cf%83%cf%84%ce%b7%ce%bd-%ce%b5%ce%bb%ce%bb%ce%b1%ce%b4%ce%b1-1.webp" alt="spinogambino" title="spinogambino" loading="lazy"></p>
 <p><a href="/play"
      class="button play-button"
